--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -26,7 +26,7 @@ listen postgres_master
     timeout server  1d
     balance leastconn
 
-    server-template postgres-node 1-${var.target_maxCount} ${var.target_fqdn}:${var.target_port} resolvers dns check fastinter 1s
+    server-template postgres-node 1-${maxCount} ${fqdn}:${port} resolvers dns check fastinter 1s
 
     option tcp-check
 
@@ -78,7 +78,7 @@ listen postgres_slave
     timeout server  10800s
     balance leastconn
 
-    server-template postgres-node 1-${var.target_maxCount} ${var.target_fqdn}:${var.target_port} resolvers dns check fastinter 1s
+    server-template postgres-node 1-${maxCount} ${fqdn}:${port} resolvers dns check fastinter 1s
 
     option tcp-check
 
@@ -126,6 +126,6 @@ listen postgres_all
     timeout server  10800s
     balance leastconn
 
-    server-template postgres-node 1-${var.target_maxCount} ${var.target_fqdn}:${var.target_port} resolvers dns check fastinter 1s
+    server-template postgres-node 1-${maxCount} ${fqdn}:${port} resolvers dns check fastinter 1s
 
     option pgsql-check user healthcheck
