Update Haproxy - use native prometheus exporter

--- a/haproxy/docker-compose.yml
+++ b/haproxy/docker-compose.yml
@@ -1,23 +1,13 @@
 version: '2'
 services:
-  prometheus-exporter:
-    image: prom/haproxy-exporter
-    command:
-    - --haproxy.scrape-uri=http://haproxy:8008/stats;csv
-    labels:
-      %{~ if affinity != "" ~}
-      io.rancher.scheduler.affinity:host_label: ${affinity}
-      %{~ endif ~}
-      io.rancher.container.pull_image: always
-      prometheus_port: '9101'
   haproxy:
-    image: haproxy:1.8
+    image: haproxy:2.3
     secrets:
-    - ${name}-haproxy-config
+    - ${secret}
     command:
     - haproxy
     - -f
-    - /run/secrets/${name}-haproxy-config
+    - /run/secrets/${secret}
     labels:
       %{~ if affinity != "" ~}
       io.rancher.scheduler.affinity:host_label: ${affinity}
@@ -26,6 +16,7 @@ services:
       %{~ if global ~}
       io.rancher.scheduler.global: 'true'
       %{~ endif ~}
+      prometheus_port: '8008'
 secrets:
-  ${name}-haproxy-config:
+  ${secret}:
     external: 'true'
