--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -15,6 +15,8 @@ resolvers dns
 listen statistics
     bind *:8008
     mode http
+    option http-use-htx
+    http-request use-service prometheus-exporter if { path /metrics }
     stats enable
     stats uri /stats
 
