feat: enable logging to stdout

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,8 +1,8 @@
 global
     maxconn 4096
+    log stdout  format raw  local0  info
 
 defaults
-    log global
     timeout connect  5000
     timeout client  10000
     timeout server  10000
