feat: increase logging on TCP connections

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -22,6 +22,7 @@ listen statistics
 listen postgres_master
     bind *:5432
     mode tcp
+	option tcplog
     option tcp-smart-connect
     timeout client  1d
     timeout server  1d
@@ -74,6 +75,7 @@ listen postgres_master
 listen postgres_slave
     bind *:5433
     mode tcp
+	option tcplog
     option tcp-smart-connect
     timeout client  10800s
     timeout server  10800s
@@ -122,6 +124,7 @@ listen postgres_slave
 listen postgres_all
     bind *:5434
     mode tcp
+	option tcplog
     option tcp-smart-connect
     timeout client  10800s
     timeout server  10800s
