--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -23,6 +23,7 @@ listen postgres_master
     bind *:5432
     mode tcp
     option tcplog
+    log global
     option tcp-smart-connect
     timeout client  1d
     timeout server  1d
@@ -76,6 +77,7 @@ listen postgres_slave
     bind *:5433
     mode tcp
     option tcplog
+    log global
     option tcp-smart-connect
     timeout client  10800s
     timeout server  10800s
@@ -125,6 +127,7 @@ listen postgres_all
     bind *:5434
     mode tcp
     option tcplog
+    log global
     option tcp-smart-connect
     timeout client  10800s
     timeout server  10800s
